src/main/java/com/example/final_project/domain/error/ApplicationProcessError.java
package com.example.final_project.domain.error;

public interface ApplicationProcessError {

    Integer getCode();

    String getReason();

    String getMessage();

}
